2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Rematerialization of stack locations.

2021-11-16 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Preparations for the rematerialization of stack locations.

2021-11-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/atomic_flag_clear.c:
	  Fix handling of atomic_flag with clear state 1.

2021-11-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c,
	  src/f8/ralloc.c,
	  src/f8/gen.c:
	  Improve rematerialization of stack addresses.

2021-11-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-09 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/tinyaes.c:
	  AES regression test.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdatomic.h,
	  device/lib/tlcs90/atomic_flag_test_and_set.s,
	  device/lib/atomic_flag_clear.c:
	  Improve atomic_flag using TLCS-90 test-and-set instruction.
	* sdas/astlcs90/t90.h,
	  sdas/astlcs90/t90mch.c,
	  sdas/astlcs90/t90pst.c:
	  Support tset.

2021-11-08 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  f8 bitfield fixes.

2021-11-06 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.
